# llm-cerebras

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  pyproject.toml.backup  setup.py
.artefacts/: cerebras-api-notes.txt
llm_cerebras/: __init__.py  cerebras.py
test_results/: basic_schema.json  complex_schema.json  multi_schema.json  person_schema.json  schema_by_id.json  schema_tests_summary.md  schema_with_descriptions.json  template_schema.json  test_cerebras_schema.py  test_cerebras_version.py
tests/: test_automated_user.py  test_cerebras.py  test_integration.py  test_schema_support.py
