[project]
name = "llm-cerebras"
version = "0.1.4"
description = "Plugin for LLM adding fast Cerebras inference API support"
readme = "README.md"
authors = [{name = "Thomas (Thomasthomas) Hughes"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm",
    "httpx",
]
requires-python = ">3.7"

[project.urls]
Homepage = "https://github.com/irthomasthomas/llm-cerebras"
Changelog = "https://github.com/irthomasthomas/llm-cerebras/releases"
Issues = "https://github.com/irthomasthomas/llm-cerebras/issues"

[project.entry-points.llm]
cerebras = "llm_cerebras.cerebras"